--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "nails",
   "private": true,
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
+"scripts": {
+  "build": "vite build",  
+  "dev": "vite",          
+  "start": "node server.js",
+  "typecheck": "tsc"
+},
   "dependencies": {
     "@react-router/node": "^7.3.0",
     "@react-router/serve": "^7.3.0",
