--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "nails",
   "private": true,
   "type": "module",
-"scripts": {
-  "build": "vite build",  
-  "dev": "vite",          
-  "start": "node server.js",
-  "typecheck": "tsc"
-},
+  "scripts": {
+    "build": "react-router build",
+    "dev": "react-router dev",
+    "start": "react-router-serve ./build/server/index.js",
+    "typecheck": "react-router typegen && tsc"
+  },
   "dependencies": {
     "@react-router/node": "^7.3.0",
     "@react-router/serve": "^7.3.0",
